--- a/family-money-planner-frontend/public/manifest.json
+++ b/family-money-planner-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Family Money Planner",
+  "name": "Family Money Planner",
   "icons": [
     {
       "src": "favicon.ico",
